--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+/*Starting defaults*/
+
 img,
 embed,
 object,
 video {
     max-width: 100%;
 }
+
 h1,
 h2,
 h3,
@@ -12,33 +15,41 @@ h5,
 h6,
 a,
 p,
-span{
+span {
     font-family: "Montserrat", serif;
 }
-.flex-container{
+
+/*header*/
+
+.flex-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-body{
+
+body {
     margin: 0;
     padding: 0;
     background: url(../img/patterns/geometry.png);
 }
-header{
+
+header {
     flex-direction: column;
     margin: 20px 0;
 }
-h1{
+
+h1 {
     font-size: 40px;
 }
-.info{
+
+.info {
     flex-direction: row;
     justify-content: space-between;
     width: 20%;
     min-width: 300px;
 }
-.stars{
+
+.stars {
     justify-content: flex-start;
     width: 45px;
     height: 15px;
@@ -46,19 +57,25 @@ h1{
     border: 2px solid black;
     border-radius: 15px;
 }
-.reset{
+
+.reset {
     font-size: 20px;
 }
-.reset:hover{
+
+.reset:hover {
     color: #4bb0b9;
     cursor: pointer;
 }
-.main{
+
+/*Main content*/
+
+.main {
     width: 100%;
     align-content: flex-start;
     flex-direction: column;
 }
-.game{
+
+.game {
     padding: 15px;
     border-radius: 15px;
     width: 600px;
@@ -70,7 +87,8 @@ h1{
     justify-content: space-around;
     box-shadow: 10px 10px 20px lightgrey;
 }
-#startGame{
+
+#startGame {
     font-size: 35px;
     color: white;
     border: 2px solid white;
@@ -78,12 +96,14 @@ h1{
     padding: 15px;
     box-shadow: 10px 10px 20px lightgrey;
 }
-#startGame:hover{
+
+#startGame:hover {
     color: #4bb0b9;
     cursor: pointer;
     border: 2px solid #4bb0b9;
 }
-.card{
+
+.card {
     margin: 3px;
     border-radius: 15px;
     border: 3px solid white;
@@ -91,7 +111,8 @@ h1{
     width: 22%;
     height: 22%;
 }
-.fa-custom{
+
+.fa-custom {
     display: none;
     font-size: 40px;
     color: white;
@@ -99,8 +120,7 @@ h1{
 
 /*Winning screen*/
 
-
-.victory{
+.victory {
     visibility: hidden;
     top: 0;
     float: left;
@@ -109,7 +129,8 @@ h1{
     height: 100%;
     flex-direction: column;
 }
-.stats{
+
+.stats {
     background: linear-gradient(120deg, #8df4dc 26.3%, #00e2ff 100%);
     color: white;
     padding: 15px;
